--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-.App-header {
-  background-color: #282c34;
+.app {
+  background-color: #121317;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
