--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,27 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  background-image: url('https://bnetcmsus-a.akamaihd.net/cms/content_entry_media/VHAUMBN792L91589912865216.jpg');
+  background-position: center;
+}
+
+.home-container {
+  background-color: rgba(18, 19, 23, 0.9);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 50px;
+  height: 100%;
+  width: 80%;
+  border-radius: 50px;
+}
+
+#disclaimer {
+  font-size: 18px;
+  text-align: center;
+  width: 50%;
+  position: relative;
+  bottom: 50px;
+  z-index: 0;
 }
